Changed plus/minus icons; added app icon; Intents setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MonthlyFinance</string>
     <string name="action_settings">Settings</string>
-    <string name="add_income">Add Income Activity</string>
+    <string name="edit_income_amount">Income amount</string>
+    <string name="edit_transaction_amount">Transaction cost</string>
 </resources>
